duniverse/menhirLib.20200211/test/static/bad/calc-no-dollars.exp
File "calc-no-dollars.mly", line 24, characters 11-13:
Error: please do not use $3. Instead, name this value.
